--- a/index.html
+++ b/index.html
@@ -185,4 +185,34 @@
         <section id="why">
             <h2>Why Board Game Bonanza?</h2>
             <p>At Board Game Bonanza, we aim to provide an inclusive space for people to relax and socialize through gaming. Whether you’re a strategy mastermind or someone looking for a fun way to unwind, our events offer a welcoming atmosphere for everyone.</p>
-           
+            <figure>
+                <img src="https://image.pollinations.ai/prompt/Group%20of%20people%20laughing%20and%20playing%20board%20games?width=512&height=512&nologo=true" alt="People Laughing and Playing Board Games">
+                <figcaption>A group of people laughing and playing board games.</figcaption>
+                <p style="font-style: italic;">Prompt: Group of people laughing and playing board games</p>
+            </figure>
+            <p>We believe board games can bring people together, foster creativity, and strengthen community bonds.</p>
+        </section>
+        <section id="ai-prompt" class="ai-tab">
+            <h2>AI Generated Images Prompt</h2>
+            <p>This is a list of prompts used to generate images for our site:</p>
+            <ul>
+                <li>Group of people laughing and playing board games</li>
+                <li>Board game table top view</li>
+                <li>Group of people playing board games</li>
+                <li>Clock with board game pieces</li>
+                <li>Map with board game markers</li>
+                <li>Hands setting up a board game</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Board Game Bonanza. All rights reserved.</p>
+        <p>Website designed by <a href="https://swayamtripathy973.github.io/SwayamTripathy973/itis3135/Tripathywebsolutions.co/index.html" target="_blank">Tripathywebsolutions.co</a></p>
+        <div class="validation-buttons">
+            <a href="https://validator.w3.org/" target="_blank">HTML Validator</a>
+            <a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS Validator</a>
+            <a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank">Disability/Accessibility</a>
+        </div>
+    </footer>
+</body>
+</html>
